Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ footer{ padding: 40px; text-align: center; border-top: 1px solid var(--glass-bor
             </p>
         </div>
     <div style="margin-top: 20px; display: flex; gap: 20px; justify-content: center;">
-        <a href="mailto:xvanpratama@example.com" style="color: var(--text-main); font-size: 1.5rem;"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/evan085100" style="color: var(--text-main); font-size: 1.5rem;"><i class="fab fa-github"></i></a>
         <a href="https://instagram.com/h0wpann" style="color: var(--accent); font-size: 1.5rem;"><i class="fab fa-instagram"></i></a>
         <a href="https://wa.me/6282151061969" style="color: var(--accent); font-size: 1.5rem;"><i class="fab fa-whatsapp"></i></a></div>
         
@@ -434,4 +434,5 @@ const observer = new IntersectionObserver((entries) => {
 reveals.forEach(reveal => observer.observe(reveal));
 </script>
 </body>
+
 </html>
